--- a/nofs_pop.html
+++ b/nofs_pop.html
@@ -414,10 +414,17 @@
 
             <p><strong>Population Growth = (Natality + Immigration) - (Mortality + Emigration)</strong></p>
 
-            <h3>The Demographic Transition & Traps</h3>
-            <p>As countries develop, they go through 4 stages. A <span class="key-term">Demographic Trap</span> occurs when a country gets stuck in <strong>Stage 2</strong>—death rates fall (due to better health), but birth rates stay high, leading to explosive population growth that overwhelms the economy.</p>
+            <h3>The Demographic Transition Model (DTM)</h3>
+            <p>The Demographic Transition Model (DTM) describes four stages of economic development that nations tend to pass through, which correlates directly to changes in birth and death rates:</p>
+            <ol class="list-decimal pl-5 mb-4">
+                <li><strong>Pre-industrial Stage:</strong> High birth rate and high death rate, resulting in little population growth.</li>
+                <li><strong>Transitional Stage:</strong> Death rates drop rapidly (due to improved sanitation/health care), but birth rates remain high. This causes the fastest rate of population growth.</li>
+                <li><strong>Industrial Stage:</strong> Birth rates begin to fall and approach the death rate as education and modernization increase. Population growth continues, but slows down.</li>
+                <li><strong>Post-industrial Stage:</strong> Birth rate falls further, equaling or falling below the death rate, leading to zero or even negative population growth (population decline).</li>
+            </ol>
+            <p>As countries develop, they go through these 4 stages. A <span class="key-term">Demographic Trap</span> occurs when a country gets stuck in <strong>Stage 2</strong>—death rates fall (due to better health), but birth rates stay high, leading to explosive population growth that overwhelms the economy.</p>
             
-            [Image of demographic transition model graph]
+            <img src="https://scareysci.github.io/envsci20textbook/images/fig1_2.jpg" alt="Graph illustrating the four stages of the Demographic Transition Model showing high and low curves for Birth Rate and Death Rate." class="content-image">
 
             <h3>Interpreting Population Pyramids</h3>
             <p>The shape of a population pyramid tells a story about a country's past, present, and future. By observing the width of the base (young people) versus the top (elderly), we can infer the population's stability and stage of development.</p>
