--- a/atm1.html
+++ b/atm1.html
@@ -295,6 +295,12 @@
         </div>
     </section>
 
+    <!-- Embedded Video -->
+    <div style="text-align: center; margin: 40px 0;">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/-9NM-O78i9A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style="max-width: 100%; border-radius: 8px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);"></iframe>
+        <p style="font-size: 0.9rem; color: #666; font-style: italic; margin-top: 10px;">Video: Introduction to the Atmosphere</p>
+    </div>
+
     <section id="section1" class="clearfix">
         <h2>II. Section 1: The Air We Breathe (ES20-AH1)</h2>
         <p>The atmosphere is not merely empty space; it is a dynamic ocean of gases that protects and sustains life on Earth. While its composition has remained relatively stable for millennia, human activity—specifically the burning of fossil fuels and industrial processes—is altering this delicate balance.</p>
@@ -550,9 +556,6 @@
     </footer>
 
 </div>
-
-</body>
-</html>
 
 </body>
 </html>
