--- a/atm3.html
+++ b/atm3.html
@@ -438,9 +438,16 @@
                 <p>Normally, warm air rises and carries pollution away. In a "Heat Dome" (Inversion), a layer of warm air sits on top of cold air near the ground, acting like a <strong>LID</strong>. This traps smoke and smog at ground level.</p>
             </div>
             <div class="training-card">
-                <h4>Combustion Chemistry</h4>
-                <p><strong>Complete Combustion:</strong> Fuel + Oxygen → Heat + CO2 + Water (Clean burn).</p>
-                <p><strong>Incomplete Combustion:</strong> Not enough Oxygen → Heat + CO2 + Water + <strong>Soot + Carbon Monoxide (CO)</strong> (Dangerous).</p>
+                <h4>The Toxic Six (Common Pollutants)</h4>
+                <p>These are the 6 major pollutants monitored by the Council. Know your enemy.</p>
+                <ul style="line-height: 1.6;">
+                    <li><strong>1. Particulate Matter (PM2.5):</strong> From wildfire smoke and dust. Lodges deep in lungs.</li>
+                    <li><strong>2. Ground-Level Ozone (O3):</strong> Created by sun reacting with car exhaust. Causes "sunburn" on lungs.</li>
+                    <li><strong>3. Nitrogen Oxides (NOx):</strong> From high-heat engines (diesel/gas). Creates acid rain.</li>
+                    <li><strong>4. Sulfur Dioxide (SO2):</strong> From burning coal or diesel. Smells like burnt matches.</li>
+                    <li><strong>5. Carbon Monoxide (CO):</strong> Odorless killer from incomplete combustion (generators).</li>
+                    <li><strong>6. Hydrogen Sulfide (H2S):</strong> "Sour Gas" from rotting waste or oil/gas. Smells like rotten eggs.</li>
+                </ul>
             </div>
 
             <h3>Module 3: The Great Misunderstanding</h3>
@@ -476,7 +483,7 @@
                 </ul>
             </div>
             
-             <h3>Module 5: Stewardship Solutions</h3>
+             <h3>Module 5: Stewardship & Survival Tech</h3>
             <div class="training-card">
                 <h4>Changing the Economy</h4>
                 <ul>
@@ -484,6 +491,14 @@
                     <li><strong>Circular Economy:</strong> Take -> Make -> Reuse -> Return. (The goal of the Dome).</li>
                 </ul>
                 <p><strong>Indigenous Ways of Knowing:</strong> Focuses on stewardship and treating nature as a <em>relative</em> rather than a <em>commodity</em> to be sold.</p>
+            </div>
+            <div class="training-card">
+                <h4>Survival Tech Specs (For Roles 4, 6, 7)</h4>
+                <ul>
+                    <li><strong>Biogas Digester (Role 4):</strong> A tank that takes organic waste (food/poop) and uses bacteria to break it down. <em>Output:</em> Methane (fuel for cooking/heating) and Fertilizer (for crops).</li>
+                    <li><strong>Drought-Resistant GMOs (Role 7):</strong> Crops genetically modified to survive with 50% less water. <em>Pros:</em> Prevents starvation. <em>Cons:</em> Risk of reducing biodiversity or "superweeds."</li>
+                    <li><strong>Passive Solar Retrofitting (Role 6):</strong> Modifying existing buildings to save energy. Examples: Installing high-efficiency windows, adding insulation, and painting roofs white to reflect heat.</li>
+                </ul>
             </div>
         </div>
 
@@ -576,6 +591,11 @@
                 <span class="concept-title">Training Manual: Environmental Health</span>
                 <p><strong>Vector-Borne Disease:</strong> Diseases spread by organisms like mosquitos or ticks (vectors). As climate warms, vectors move into new areas (like Northern Saskatchewan) bringing diseases like West Nile or Lyme Disease.</p>
                 <p><strong>Respiratory Stress:</strong> High PM2.5 (smoke/dust) triggers asthma. High CO2 causes "Sick Building Syndrome" (headaches/fatigue).</p>
+                <p><strong>Heat Stress Triage (Important for Task A):</strong></p>
+                <ul style="font-size: 0.9em;">
+                    <li><strong>Heat Exhaustion:</strong> Heavy sweating, pale skin, dizziness. Treatment: Cool down, water.</li>
+                    <li><strong>Heat Stroke:</strong> No sweating (dry skin), high fever (>39°C), confusion/unconscious. Treatment: Emergency medical cooling immediately. Life threatening.</li>
+                </ul>
             </div>
 
             <h3>1. The Data Log</h3>
@@ -620,7 +640,7 @@
                 <div class="task-day">
                     <strong>Days 4-6: Heat Response</strong>
                     <ul class="task-list">
-                        <li><strong>Task A: Diagnosis Guide.</strong> Create a visual guide (Poster format) comparing "Heat Exhaustion" vs "Heat Stroke." Include: Symptoms, First Aid, and Triage Priority.</li>
+                        <li><strong>Task A: Diagnosis Guide.</strong> Create a visual guide (Poster format) comparing "Heat Exhaustion" vs "Heat Stroke." Include: Symptoms, First Aid, and Triage Priority. (See Concept Box for symptoms).</li>
                         <li><strong>Task B: Vulnerability Assessment.</strong> Write a report identifying which sectors of the population (Elderly, Children, Manual Laborers) are most at risk during the Heat Dome event.</li>
                     </ul>
                 </div>
@@ -655,6 +675,7 @@
                 <p><strong>Growth Rate (r):</strong> The speed at which a population grows. <br>Formula: <code>r = (Births + Immigration) - (Deaths + Emigration)</code>.</p>
                 <p><strong>Rule of 70:</strong> Estimating how many years it takes a population to double. <br>Formula: <code>Doubling Time = 70 / growth rate (as a percentage)</code>.</p>
                 <p><strong>Carrying Capacity (K):</strong> The maximum number of individuals the environment can support sustainably.</p>
+                <p><strong>Demographic Transition Model (DTM):</strong> A model showing how countries change over time. Stage 1 (High Birth/Death) -> Stage 4 (Low Birth/Death). To lower birth rates, you need to improve education and healthcare.</p>
             </div>
 
             <h3>1. The Data Log</h3>
@@ -683,6 +704,11 @@
                     <td>Immigrants (Rescued)</td>
                     <td>5</td>
                     <td><strong>20</strong></td>
+                </tr>
+                <tr>
+                    <td>Emigration (Leaving)</td>
+                    <td>0</td>
+                    <td><strong>0</strong> (Dome is sealed)</td>
                 </tr>
             </table>
 
@@ -784,7 +810,7 @@
                         <strong>REQUIRED REPORT STRUCTURE:</strong><br>
                         1. <strong>Current Inventory:</strong> The total tons of CO2e.<br>
                         2. <strong>The Methane Problem:</strong> Explain why Methane is more dangerous than CO2.<br>
-                        3. <strong>Biogas Solution:</strong> Proposal for a Biogas Digester system (Research: How does it work? What are the outputs?).<br>
+                        3. <strong>Biogas Solution:</strong> Proposal for a Biogas Digester system (See Training Module 5: Survival Tech Specs).<br>
                         4. <strong>Reduction Targets:</strong> Set a goal for 2050 (e.g., "Reduce emissions by 40%").<br>
                     </div>
                 </div>
@@ -923,7 +949,7 @@
                     <strong>Days 4-6: Crisis Management</strong>
                     <ul class="task-list">
                         <li><strong>Task A: Load Shedding Plan.</strong> The grid is failing. Create a priority list of sectors (Hospital, Ag, Housing, Admin). Who gets cut off first? Justify your ethical choice.</li>
-                        <li><strong>Task B: Efficiency Research.</strong> Research "Passive Solar Design" or "Retrofitting." Write a guide on how to renovate the housing sector to use less energy.</li>
+                        <li><strong>Task B: Efficiency Research.</strong> Research "Passive Solar Design" or "Retrofitting" (See Training Module 5: Survival Tech Specs). Write a guide on how to renovate the housing sector to use less energy.</li>
                     </ul>
                 </div>
                 <div class="task-day">
@@ -997,7 +1023,7 @@
                     <strong>Days 4-6: Drought Protocol</strong>
                     <ul class="task-list">
                         <li><strong>Task A: Retrieve Forecast.</strong> Go to Central Station. <strong>ACTION: RETRIEVE FROM FOLDER #5 (PALEO).</strong> Look at the 2050 Temperature Projection. Will Wheat survive?</li>
-                        <li><strong>Task B: GMO Defense Paper.</strong> Write a 1-page defense of using "Drought Resistant GMO Crops." Address the pros (survival) vs the cons (biodiversity loss).</li>
+                        <li><strong>Task B: GMO Defense Paper.</strong> Write a 1-page defense of using "Drought Resistant GMO Crops." (See Training Module 5: Survival Tech Specs). Address the pros (survival) vs the cons (biodiversity loss).</li>
                     </ul>
                 </div>
                 <div class="task-day">
@@ -1183,7 +1209,5 @@
             }, 1000);
         }
     </script>
-</body>
-</html>
 </body>
 </html>
