--- a/index.html
+++ b/index.html
@@ -153,6 +153,12 @@
                         <span class="text-xs font-light opacity-80 block mb-1">Podcast</span>
                         Atmosphere & Climate: The Podcast
                     </a>
+
+                    <!-- NEW ASSIGNMENT BUTTON -->
+                    <a href="atm3.html" class="chapter-link p-5 bg-red-600 text-white font-semibold rounded-xl shadow-lg hover:bg-red-700">
+                        <span class="text-xs font-light opacity-80 block mb-1">Assignment</span>
+                        Protocol Zero - Assignment
+                    </a>
                     
                     <div class="p-4 bg-gray-100 text-gray-600 font-medium rounded-xl border border-gray-300 shadow-inner italic flex items-center justify-center">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2 text-gray-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
@@ -279,6 +285,16 @@
                         <h3 id="podcast_intro" class="text-xl font-semibold mt-4">Listening to the Atmosphere</h3>
                         <p>In this episode, we explore the dynamic nature of our atmosphere, discussing weather patterns, climate change, and how human actions influence the air we breathe.</p>
                     `
+                },
+                {
+                    unit: 'Atmosphere and Human Impact',
+                    chapter: 'Assignment',
+                    title: 'Protocol Zero - Assignment',
+                    url: 'atm3.html',
+                    htmlContent: `
+                        <h3 id="protocol_zero" class="text-xl font-semibold mt-4">Protocol Zero Directive</h3>
+                        <p>This assignment challenges students to develop a comprehensive action plan for immediate climate mitigation strategies, analyzing the tipping points of **global warming**.</p>
+                    `
                 }
             ];
 
@@ -399,4 +415,3 @@
     </script>
 </body>
 </html>
-
