--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <div>
                 <h2 class="text-2xl font-bold text-gray-700 mb-6 border-b-2 border-green-200 pb-3 flex items-center">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-3 text-green-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M19 21V5a2 2 0 00-2-2H7a2 2 0 00-2 2v16m14 0h2m-2 0h-5m-9 0H3m2 0h5M9 7h1m-1 4h1m-4-4h1m-1 4h1m4-4h1m-1 4h1m-4-4h1m-1 4h1m-4-4h1m-1 4h1m9-4h1m-1 4h1" />
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M19 21V5a2 2 0 00-2-2H7a2 2 0 00-2 2v16m14 0h2m-2 0h-5m-9 0H3m2 0h5M9 7h1m-1 4h1m-4-4h1m-1 4h1m4-4h1m-1 4h1m-4-4h1m-1 4h1m9-4h1m-1 4h1" />
                     </svg>
                     Unit 3: Terrestrial Ecosystems
                 </h2>
@@ -185,6 +185,24 @@
             </div>
 
         </div> 
+        
+        <!-- GIANT FINAL EXAM BUTTON -->
+        <div class="mt-12 pt-10 border-t-2 border-gray-100">
+            <a href="finalreview.html" 
+               class="group relative block w-full py-6 px-8 text-3xl md:text-4xl font-black text-white bg-gradient-to-r from-red-600 to-rose-600 rounded-2xl shadow-xl hover:shadow-2xl hover:from-red-500 hover:to-rose-500 transition-all duration-300 transform hover:-translate-y-1 uppercase tracking-widest border-4 border-white ring-4 ring-red-100">
+                <span class="flex items-center justify-center gap-4">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 md:h-12 md:w-12 animate-pulse" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="3">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                    </svg>
+                    Final Exam Review
+                </span>
+                <span class="absolute top-0 right-0 -mt-2 -mr-2 flex h-6 w-6">
+                  <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-red-400 opacity-75"></span>
+                  <span class="relative inline-flex rounded-full h-6 w-6 bg-red-500"></span>
+                </span>
+            </a>
+        </div>
+
     </div>
     
     <script>
