--- a/index.html
+++ b/index.html
@@ -186,10 +186,11 @@
 
         </div> 
         
-        <!-- GIANT FINAL EXAM BUTTON -->
+        <!-- EXAM REVIEW SECTION -->
         <div class="mt-12 pt-10 border-t-2 border-gray-100">
+            <!-- Existing Red Review Button -->
             <a href="finalreview.html" 
-               class="group relative block w-full py-6 px-8 text-3xl md:text-4xl font-black text-white bg-gradient-to-r from-red-600 to-rose-600 rounded-2xl shadow-xl hover:shadow-2xl hover:from-red-500 hover:to-rose-500 transition-all duration-300 transform hover:-translate-y-1 uppercase tracking-widest border-4 border-white ring-4 ring-red-100">
+               class="group relative block w-full py-6 px-8 text-3xl md:text-4xl font-black text-white bg-gradient-to-r from-red-600 to-rose-600 rounded-2xl shadow-xl hover:shadow-2xl hover:from-red-500 hover:to-rose-500 transition-all duration-300 transform hover:-translate-y-1 uppercase tracking-widest border-4 border-white ring-4 ring-red-100 mb-6">
                 <span class="flex items-center justify-center gap-4">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 md:h-12 md:w-12 animate-pulse" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="3">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
@@ -199,6 +200,18 @@
                 <span class="absolute top-0 right-0 -mt-2 -mr-2 flex h-6 w-6">
                   <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-red-400 opacity-75"></span>
                   <span class="relative inline-flex rounded-full h-6 w-6 bg-red-500"></span>
+                </span>
+            </a>
+
+            <!-- NEW Jeopardy Blue Button -->
+            <a href="jeopardy.html" 
+               class="group relative block w-full py-6 px-8 text-3xl md:text-4xl font-black text-white bg-gradient-to-r from-blue-700 to-blue-900 rounded-2xl shadow-xl hover:shadow-2xl hover:from-blue-600 hover:to-blue-800 transition-all duration-300 transform hover:-translate-y-1 uppercase tracking-widest border-4 border-white ring-4 ring-blue-100">
+                <span class="flex items-center justify-center gap-4">
+                    <!-- Question Mark / Jeopardy Style Icon -->
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 md:h-12 md:w-12" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="3">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M8.228 9c.549-1.165 2.03-2 3.772-2 2.21 0 4 1.343 4 3 0 1.4-1.278 2.575-3.006 2.907-.542.104-.994.54-.994 1.093m0 3h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+                    </svg>
+                    Final Exam Jeopardy
                 </span>
             </a>
         </div>
